# ChangeLog for sci-biology/TransDecoder
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  19 Nov 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  TransDecoder-2.0.1.ebuild:
  sci-biology/TransDecoder: update homepage

  19 Nov 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +files/TransDecoder-2.0.1__fix_paths.patch, -files/TransDecoder.patch,
  TransDecoder-2.0.1.ebuild, files/pfam_runner.pl.patch:
  sci-biology/TransDecoder: install properly perl modules; fix PERL5INC paths by
  adding TransDecoder::, ebuild cleanup

  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  sci-biology/TransDecoder: Add github to remote-id in metadata.xml

  27 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  transdecoder-2.0.1.ebuild:
  sci-biology/transdecoder: more ebuild cleanup

  27 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  transdecoder-2.0.1.ebuild:
  sci-biology/transdecoder: ebuild cleanup

  27 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  -transdecoder-20140704.ebuild, transdecoder-2.0.1.ebuild:
  sci-biology/transdecoder: drop old

  17 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  transdecoder-2.0.1.ebuild, transdecoder-20140704.ebuild:
  sci-biology/transdecoder: fixed installation of perl-related files

  19 Mar 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  transdecoder-2.0.1.ebuild:
  dropped hmmer dependency altogether, added pkg_postinst() with
  usage/dependency info

*transdecoder-2.0.1 (19 Mar 2015)

  19 Mar 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +transdecoder-2.0.1.ebuild, transdecoder-20140704.ebuild:
  removing KEYWORDS until the perl files are installed to some other place. At
  the moment I get: 'perl-module.eclass: Suspicious environment values found.
  PERL5LIB="/usr/lib64/perl5/vendor_perl/5.18.2/TransDecoder"'

  15 Feb 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  transdecoder-20140704.ebuild: